# flext-tap-oracle-wms

./: .env.example  .env.example.real  .flext-standards.toml  .gitignore  .pre-commit-config.yaml  .ruff_strict.toml  ACHIEVEMENT_SUMMARY.md  AGENTS.md  CLAUDE.local.md  CLAUDE.md  COMPLETION_SUMMARY.md  CONTINUOUS_QUALITY_MAINTENANCE.md  DEPLOYMENT_GUIDE.md  DYNAMIC_STREAMS_REFACTORING.md  E2E_100_PERCENT_REPORT.md  E2E_TEST_REPORT.md  ENHANCED_LOGGING_SUMMARY.md  FINAL_100_PERCENT_VALIDATION_REPORT.md  FINAL_COMPLETION.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_MYPY_RESOLUTION.md  FINAL_PROJECT_STATUS.md  FINAL_ZERO_VIOLATIONS_ACHIEVEMENT_REPORT.md  FLEXT_CORE_MIGRATION_APPLIED.md  LINT_FIXES_REPORT.md  LOGGING_MIGRATION.md  MIGRATION_PLAN.md  Makefile  Makefile_modern  PEP_STRICT_COMPLIANCE_SUMMARY.md  PYTEST_REFACTOR_SUMMARY.md  QUALITY_VALIDATION_REPORT.md  README.md  README_QUALITY_IMPLEMENTATION.md  README_modern.md  STRICT_LINT_MYPY_FIXES_REPORT.md  STRICT_PEP_COMPLIANCE_REPORT.md  TESTING_COMPLETION_REPORT.md  TODO.md  ULTRA_DEBUG_LOGGING_COMPLETE.md  (+93 more)
.cache/: wms_cache.db
.cursor/: settings.json
.github/workflows/: ci.yml  pr-checks.yml  release.yml
.qlty/: qlty.toml
.scope/: config.toml
.serena/: project.yml
api-reference/: README.md
architecture/: flext-integration.md
archive/config-files/: .pylintrc  .ruff_selective.toml  setup.cfg
archive/vscode/: extensions.json  launch.json  settings.json  tasks.json
config/profiles/: gruponos.json  template.json
development/: README.md  code-standards.md  debugging-guide.md  development-workflow.md  migration-strategy.md  security-standards.md  testing-strategy.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION_SYSTEM.md  README.md  REFACTORING_PLAN.md  SINGER_SDK_INTEGRATION.md  TODO.md  USAGE_GUIDE.md  api-reference.md  architecture.md  configuration.md  documentation-index.md  getting-started.md  index.md  oracle-references.md  quickstart.md  wms-api-reference.md  wms-authentication.md  wms-data-extraction.md  wms-entity-discovery.md
docs/api/: README.md
docs/api-reference/: README.md
docs/architecture/: README.md  flext-integration.md
docs/development/: README.md  code-standards.md  debugging-guide.md  development-workflow.md  migration-strategy.md  mocking-strategy.md  quality-gates.md  refactoring-guidelines.md  security-standards.md  singer-compliance.md  test-architecture.md  testing-strategy.md  validation-checklist.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
docs/standards/: python-module-organization.md
examples/: 01_basic_usage.py  README.md  __init__.py  advanced_usage.py  basic_usage.py  config.json.example
examples/configs/: basic.json  production.json  test_config_1.json  test_config_2.json  test_config_circuit_breaker.json  test_config_circuit_breaker_failure.json  test_config_filters_advanced.json  test_config_filters_complex.json  test_config_filters_optimized.json  test_config_fixed.json  test_config_full.json  test_config_limit_paged.json  test_config_limit_sequenced.json  test_config_multiple.json  test_config_multiple_optimized.json  test_config_ordering.json  test_config_pagination.json  test_config_performance.json  test_config_simple_dates_mixed.json  test_config_simple_dates_today_7d.json  test_config_simple_dates_yesterday.json
guides/: configuration.md  development.md  getting-started.md  testing.md  troubleshooting.md
scripts/: README.md
src/: README.md
src/flext_tap_oracle_wms/: README.md  __init__.py  __init__.pyi  __main__.py  __version__.py  _config.py  _exports.py  _exports_lazy_part_01.py  _settings.py  api.py  auth.py  cache.py  cache_manager.py  cli.py  cli_enhanced.py.disabled  client.py  config.py  config_mapper.py  config_validator.py  constants.py  critical_validation.py  discovery.py  enhanced_logging.py  entity_discovery.py  error_recovery.py  error_recovery_advanced.py  errors.py  exceptions.py  interfaces.py  logging.py  models.py  modern_discovery.py  monitoring.py  plugin.py  protocols.py  schema_flattener.py  schema_generator.py  settings.py  simple_api.py  streams.py  (+14 more)
src/tap_oracle_wms/: __init__.py  __init___modern.py  __main__.py  __version__.py  auth.py  cache_manager.py  cli.py  cli_enhanced.py  client.py  config.py  config_mapper.py  config_profiles.py  config_validator.py  critical_validation.py  date_utils.py  discovery.py  discovery_modern.py  enhanced_logging.py  entity_discovery.py  interfaces.py  logging_advanced.py  logging_config.py  models.py  monitoring.py  schema_generator.py  stream_modern.py  streams.py  streams_advanced.py  streams_real.py  tap.py  tap_modern.py  type_mapping.py
standards/: python-module-organization.md
templates/: .env.template  meltano.yml.template
tests/: README.md  __init__.py  base.py  config.json  conftest.py  conftest.py.DISABLED_USES_FORBIDDEN_SAMPLES  conftest_project.py  constants.py  models.py  protocols.py  pytest.ini  settings.py  test_e2e.py  test_generic_implementation.py  test_integration_extraction.py  test_live_comprehensive.py  test_streams.py  test_tap.py.DISABLED_USES_FORBIDDEN_SAMPLES  test_tap_initialization.py  test_unit_auth.py  test_unit_discovery.py  test_validation.py  typings.py  utilities.py  validate_all_configs.py
tests/e2e/: README.md  __init__.py  test_e2e.py  test_e2e_complete.py  test_tap_complete.py  test_tap_e2e.py  test_wms_e2e.py  validate_config.py
tests/fixtures/: __init__.py
tests/integration/: README.md  __init__.py  test_auth_headers.py  test_auth_monitoring_integration.py  test_data_extraction.py  test_direct_api.py  test_extraction.py  test_functional.py  test_functional_complete.py  test_integration_extraction.py  test_live_comprehensive.py  test_meltano_integration.py  test_real_wms.py  test_real_wms_connection.py  test_real_wms_simple.py  test_simple_integration.py  (+5 more)
tests_modern/: __init__.py  test_client.py  test_models.py
webhook-config/: webhook_config_summary.json  wms_webhook_instructions.md  wms_webhook_setup.py
(+45 files in other folders)
