[build-system]
requires = [ "poetry-core>=1.9.0",]
build-backend = "poetry.core.masonry.api"

[project]
name = "flext-tap-oracle-wms"
version = "0.7.0"
description = "FLEXT Tap Oracle WMS - Singer Tap for Oracle Warehouse Management System"
authors = [{ name = "FLEXT Team", email = "team@flext.sh" }]
maintainers = [{ name = "FLEXT Team", email = "team@flext.sh" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    # Singer SDK and Oracle dependencies
    "singer-sdk>=0.47.0",
    "oracledb>=2.4.1",
    "sqlalchemy>=2.0.0",
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",
    "httpx>=0.28.0",
    # FLEXT dependencies
    "flext-observability>=0.7.0",
]
keywords = ["flext", "singer", "tap", "oracle", "wms", "warehouse", "enterprise"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Office/Business",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/flext-sh/flext"
Repository = "https://github.com/flext-sh/flext"
Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"

[project.scripts]
tap-oracle-wms = "flext_tap_oracle_wms.tap:main"
flext-tap-oracle-wms = "flext_tap_oracle_wms.tap:main"

[tool.poetry]
name = "flext-tap-oracle-wms"
version = "0.7.0"
description = "FLEXT Tap Oracle WMS - Singer Tap for Oracle Warehouse Management System"
authors = ["FLEXT Team <team@flext.sh>"]
readme = "README.md"
packages = [{ include = "flext_tap_oracle_wms", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

# Core FLEXT dependencies - primary source of truth
flext-core = { path = "../flext-core", develop = true }
flext-observability = { path = "../flext-observability", develop = true }

# Singer SDK and Oracle dependencies
singer-sdk = ">=0.47.0"
oracledb = ">=2.4.1"
sqlalchemy = ">=2.0.0"
python-dateutil = ">=2.9.0"
tenacity = ">=9.0.0"
httpx = ">=0.28.0"

# Core dependencies are managed by flext-core - no duplication
# pydantic, pydantic-settings, click, structlog, etc.

[tool.poetry.group.dev.dependencies]
# Development dependencies
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.12.0"
pytest-xdist = ">=3.6.0"
pytest-timeout = ">=2.3.1"
pytest-sugar = ">=1.0.0"
pytest-clarity = ">=1.0.1"
pytest-benchmark = ">=4.0.0"

# Code quality
ruff = ">=0.8.0"
mypy = ">=1.13.0"
pre-commit = ">=4.0.0"
bandit = ">=1.8.0"

# Documentation
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.5.0"
mkdocs-mermaid2-plugin = ">=1.1.0"

[tool.poetry.scripts]
tap-oracle-wms = "flext_tap_oracle_wms.tap:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=flext_tap_oracle_wms",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:reports/coverage",
    "--cov-report=xml:reports/coverage.xml",
    "--cov-fail-under=90",
    "--maxfail=1",
    "--tb=short",
    "--dist=auto",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "smoke: Smoke tests",
    "e2e: End-to-end tests",
    "wms: marks tests as Oracle WMS tests",
    "singer: marks tests as Singer protocol tests",
    "tap: marks tests as tap tests",
    "oracle: marks tests as Oracle database tests",
    "discovery: marks tests as entity discovery tests",
    "requires_oracle: tests that need Oracle database access",
    "requires_wms_api: tests that need WMS API access",
]
