[build-system]
requires = [ "poetry-core>=1.9.0",]
build-backend = "poetry.core.masonry.api"

[project]
name = "flext-tap-oracle-wms"
version = "0.7.0"
description = "FLEXT Tap Oracle WMS - Singer Tap for Oracle Warehouse Management System"
authors = [{ name = "FLEXT Team", email = "team@flext.sh" }]
maintainers = [{ name = "FLEXT Team", email = "team@flext.sh" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    # Singer SDK and Oracle dependencies
    "singer-sdk>=0.47.0",
    "oracledb>=2.4.1",
    "sqlalchemy>=2.0.0",
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",
    "httpx>=0.28.0",
    # FLEXT dependencies
    "flext-observability>=0.7.0",
]
keywords = ["flext", "singer", "tap", "oracle", "wms", "warehouse", "enterprise"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Office/Business",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/flext-sh/flext"
Repository = "https://github.com/flext-sh/flext"
Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"

[project.scripts]
tap-oracle-wms = "flext_tap_oracle_wms.tap:main"
flext-tap-oracle-wms = "flext_tap_oracle_wms.tap:main"

[tool.poetry]
name = "flext-tap-oracle-wms"
version = "0.7.0"
description = "FLEXT Tap Oracle WMS - Singer Tap for Oracle Warehouse Management System"
authors = ["FLEXT Team <team@flext.sh>"]
readme = "README.md"
packages = [{ include = "flext_tap_oracle_wms", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

# Core FLEXT dependencies - primary source of truth
flext-core = { path = "../flext-core", develop = true }
flext-observability = { path = "../flext-observability", develop = true }

# Singer SDK and Oracle dependencies
singer-sdk = ">=0.47.0"
oracledb = ">=2.4.1"
sqlalchemy = ">=2.0.0"
python-dateutil = ">=2.9.0"
tenacity = ">=9.0.0"
httpx = ">=0.28.0"

# Core dependencies are managed by flext-core - no duplication
# pydantic, pydantic-settings, click, structlog, etc.

[tool.poetry.group.dev.dependencies]
# Development dependencies
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.12.0"
pytest-xdist = ">=3.6.0"
pytest-timeout = ">=2.3.1"
pytest-sugar = ">=1.0.0"
pytest-clarity = ">=1.0.1"
pytest-benchmark = ">=4.0.0"

# Code quality
ruff = ">=0.8.0"
mypy = ">=1.13.0"
pre-commit = ">=4.0.0"
bandit = ">=1.8.0"

# Documentation
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.5.0"
mkdocs-mermaid2-plugin = ">=1.1.0"

[tool.poetry.scripts]
tap-oracle-wms = "flext_tap_oracle_wms.tap:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=flext_tap_oracle_wms",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:reports/coverage",
    "--cov-report=xml:reports/coverage.xml",
    "--cov-fail-under=90",
    "--maxfail=1",
    "--tb=short",
    # Disable parallel execution for compatibility
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "smoke: Smoke tests",
    "e2e: End-to-end tests",
    "wms: marks tests as Oracle WMS tests",
    "singer: marks tests as Singer protocol tests",
    "tap: marks tests as tap tests",
    "oracle: marks tests as Oracle database tests",
    "discovery: marks tests as entity discovery tests",
    "requires_oracle: tests that need Oracle database access",
    "requires_wms_api: tests that need WMS API access",
]

[tool.ruff]
target-version = "py313"
line-length = 88
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Formatting
    "E501",     # line-too-long (handled by formatter)
    "COM812",   # missing-trailing-comma (conflicts with formatter)
    "ISC001",   # single-line-implicit-string-concatenation (conflicts with formatter)
    "CPY001",   # missing-copyright-notice (we have copyright headers)
    
    # Documentation - not strictly required for tap
    "D100",     # missing-docstring-in-public-module
    "D101",     # missing-docstring-in-public-class
    "D102",     # missing-docstring-in-public-method
    "D103",     # missing-docstring-in-public-function
    "D104",     # missing-docstring-in-public-package (unnecessary for __init__.py)
    "D105",     # missing-docstring-in-magic-method
    "D106",     # missing-docstring-in-public-nested-class
    "D107",     # missing-docstring-in-__init__
    "D203",     # blank-line-before-class-docstring (conflicts with D211)
    "D213",     # multi-line-summary-second-line (conflicts with D212)
    
    # Type annotations
    "ANN401",   # any-type (Singer SDK uses Any extensively)
    
    # Code style
    "ERA001",   # commented-out-code (development annotations)
    "EM101",    # raw-string-in-exception (overly restrictive)
    "EM102",    # f-string-in-exception (overly restrictive)
    "TRY003",   # raise-vanilla-args (overly restrictive)
    
    # Complexity
    "PLR0913",  # too-many-arguments (Singer SDK patterns)
    "PLR0912",  # too-many-branches
    "PLR0915",  # too-many-statements
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Test files have different requirements
"tests/**" = [
    "S101",     # assert (pytest uses assert statements)
    "S106",     # hardcoded-password (tests use hardcoded test passwords)
    "S105",     # hardcoded-password-string (tests use test strings)
    "PLR2004",  # magic-value-comparison (tests often use magic values)
    "SLF001",   # private-member-access (tests need to test private members)
    "PLR0913",  # too-many-arguments (test functions can have many fixtures)
    "ANN001",   # missing-type-annotation-for-function-argument (pytest fixtures)
    "ANN201",   # missing-return-type-annotation (test functions)
    "ANN002",   # missing-type-annotation-for-*args
    "ANN003",   # missing-type-annotation-for-**kwargs
    "D103",     # missing-docstring-in-public-function (test functions)
    "D102",     # missing-docstring-in-public-method (test methods)
    "PLR6301",  # no-self-use (test methods don't always use self)
    "PT011",    # pytest.raises too broad (tests may use broad exceptions)
    "ARG002",   # unused-method-argument (test fixtures)
    "C901",     # too-complex (test functions can be complex)
    "PLR0912",  # too-many-branches (test functions)
    "BLE001",   # blind-except (tests may catch broad exceptions)
    "INP001",   # implicit-namespace-package (test structure)
    "FIX002",   # line-contains-todo (tests may have todos)
    "TD002",    # missing-todo-author (test todos)
    "TD003",    # missing-todo-link (test todos)
    "PLC0415",  # import-outside-toplevel (tests may import locally)
    "DTZ001",   # datetime-without-timezone (tests may use naive datetime)
    "SIM117",   # combine-if-branches (tests may have nested with statements)
    "TRY301",   # raise-within-try (tests may raise in try blocks)
    "PT017",    # pytest-assert-in-except (tests may assert in except)
    "PT012",    # pytest-raises-with-multiple-statements (tests may be complex)
]
# Configuration files
"**/conftest.py" = [
    "EXE001",   # shebang-not-executable (conftest.py doesn't need shebang)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["flext_tap_oracle_wms"]
force-single-line = true

[tool.mypy]
files = ["src/flext_tap_oracle_wms, "tests"]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "singer_sdk.*",
    "oracledb.*",
    "sqlalchemy.*",
    "tenacity.*",
    "httpx.*",
]
ignore_missing_imports = true
